--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "url": "https://github.com/supercharge/method-missing/issues"
   },
   "devDependencies": {
-    "@hapi/code": "~8.0.2",
-    "@hapi/lab": "~23.0.0",
     "@supercharge/tsconfig": "~1.0.0",
+    "@types/jest": "~26.0.10",
     "@typescript-eslint/eslint-plugin": "~3.7.1",
     "eslint": "~7.5.0",
     "eslint-config-standard": "~14.1.1",
@@ -18,6 +17,7 @@
     "eslint-plugin-node": "~11.1.0",
     "eslint-plugin-promise": "~4.2.1",
     "eslint-plugin-standard": "~4.0.1",
+    "jest": "~26.4.2",
     "typescript": "~3.9.7"
   },
   "files": [
@@ -47,11 +47,9 @@
   "scripts": {
     "build": "tsc",
     "lint": "eslint src --ext .js,.ts",
-    "lint:fix": "eslint . --fix",
-    "list:tests": "lab --assert @hapi/code --dry --verbose",
-    "test": "npm run build && npm run lint && lab --assert @hapi/code --leaks --coverage --reporter console --output stdout --reporter html --output ./coverage/coverage.html",
-    "test:single": "lab --assert @hapi/code --leaks --lint --id",
-    "test:types": "tsc"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "npm run build && npm run lint && npm run test:run",
+    "test:run": "jest"
   },
   "types": "dist"
 }
