update package entrypoint

--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "typescript": "~3.9.7"
   },
   "files": [
-    "dist",
-    "index.js"
+    "dist"
   ],
   "homepage": "https://github.com/supercharge/method-missing",
   "keywords": [
@@ -36,7 +35,7 @@
     "superchargejs"
   ],
   "license": "MIT",
-  "main": "index.js",
+  "main": "dist",
   "publishConfig": {
     "access": "public"
   },
